--- a/docker/TestApp.Player/appsettings.json
+++ b/docker/TestApp.Player/appsettings.json
@@ -1,23 +1,37 @@
 {
-  "ELECTRONWEBPORT": 8001,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "WEBPORT": 80,
+    "Logging": {
+        "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "MaxJsonDepth": 128,
+    "AllowedHosts": "*",
+    "Communication": {
+        "Mode": "Single",
+        "MasterUrl": "http://localhost:8000/",
+        "WithWifi": false
+    },
+    "Application": {
+        "LoginAndResultAccessControl": "false",
+        "Player": {
+            "GlobalTokenLogin": "false",
+            "GlobalTokenSettings": {
+                "LoginMode": "Token",
+                "Format": "t8",
+                "AllowedCharacters": ""
+            }
+        },
+        "ResultStorage": {
+            "Location": "SpecificPath",
+            "SpecificPath": "/app/results"
+        }
+    },
+    "API": {
+        "ExternalExportKey": "",
+        "DevelopmentKey": "",
+        "LoginManagementKeys": []
     }
-  },
-  "AllowedHosts": "*",
-  "Communication": {
-    "Mode": "Single",
-    "WithWifi": false
-  },
-  "Player": {
-    "Mode": "FullScreen",
-    "IsAlwaysOnTop": "false",
-    "LoginWithPassword": "true",
-    "HorizontalAlignment": "Center",
-    "VerticalAlignment": "Center",
-    "IdleTime": 0
-  }
 }
