--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,8 @@
 version: '3.4'
 
 services:
-  testapp.player:
+  player:
     image: ghcr.io/software-driven/testappplayerserver:1.0.0
-    ports:
-      - 8001:80
     volumes:
       - ./TestApp.Player/Logins:/app/data
       - ./TestApp.Player/Results:/app/results
@@ -12,11 +10,19 @@ services:
       - type: bind
         source: ./TestApp.Player/appsettings.json
         target: /app/appsettings.json
-  testapp.editor:
+  editor:
     image: ghcr.io/software-driven/testappeditorserver:1.0.0
-    ports:
-      - 8002:80
     volumes:
       - ./TestApp.Editor/Data:/app/data
-
-
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+    depends_on:
+      - player
+      - editor
+    restart: always
